--- a/backend/package.json
+++ b/backend/package.json
@@ -8,10 +8,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2",
+    "express": "^4.20.0",
     "mongoose": "^8.6.1"
-  }
+  },
+  "description": ""
 }
